@ docs: document no-OOM hangs, GC logging setup, and thread-dump PID fix
Add a section 8 entry for the alive-but-frozen 1-2 min hangs on IntDb4
(no OOM), with the two instrumentation steps to close root cause:
enabling GC logging via setenv.sh and the corrected JVM PID detection
for real thread dumps. Note the single-backend regression.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
@